# spiral-browser

./: .editorconfig  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODEOWNERS  CODEX.md  CONTRIBUTING.md  Cargo.toml  ERRORS.md  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  deepsource.toml  deny.toml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  codacy-bot.yml  spiral-bot.yml  spiral-external-fix.yml  spiral-external-gate.yml  spiral-fix.yml  spiral-review.yml
.opencode/agents/: spiral-fixer.md  spiral-reviewer-external.md  spiral-reviewer.md
.opencode/prompts/: fix.md  review-external.md  review.md
.spiral/rules/: architecture.md  coding-standards.md  doc-drift-prevention.md  performance.md  testing.md  unsafe-standards.md  workflow.md
cloudflare/spiral-fork-reviewer/: package-lock.json  package.json  tsconfig.json  wrangler.toml
crates/spiral-browser/: Cargo.toml
crates/spiral-browser/src/: display_list.rs  event_loop.rs  lib.rs  main.rs  shell.rs  tab.rs  theme.rs
crates/spiral-browser/tests/: browser_surface.rs
crates/spiral-context/: Cargo.toml
crates/spiral-context/src/: brand.rs  caps.rs  context.rs  dom.rs  lib.rs  origin.rs
crates/spiral-context/tests/: context_surface.rs
crates/spiral-core/: Cargo.toml
crates/spiral-crypto/: Cargo.toml
crates/spiral-crypto/src/: lib.rs
crates/spiral-css/: Cargo.toml
crates/spiral-css/src/: lib.rs
crates/spiral-css/tests/: shim_surface.rs
crates/spiral-dom/: Cargo.toml
crates/spiral-filter/: Cargo.toml
crates/spiral-filter/src/: error.rs  lib.rs  rule.rs
crates/spiral-filter/src/compile/: mod.rs  trie.rs
crates/spiral-filter/src/lists/: cba.rs  mod.rs
crates/spiral-filter/src/policy/: default_policy.rs  mod.rs
crates/spiral-filter/src/runtime/: match_url.rs  mod.rs
crates/spiral-filter/src/syntax/: cosmetic.rs  mod.rs  network.rs
crates/spiral-filter/tests/: rule_model_surface.rs
crates/spiral-fmt/: Cargo.toml
crates/spiral-fmt/src/: cursor.rs  error.rs  lib.rs  token.rs
crates/spiral-fmt/src/css/: mod.rs  parser.rs  selector.rs  specificity.rs  tokenizer.rs  value.rs
crates/spiral-fmt/src/html/: fragment.rs  mod.rs  tokeniser.rs  tree.rs
crates/spiral-fmt/tests/: deepsource_autofix_probe.rs  e2e.rs  error_surface.rs  fragment.rs  noscript.rs  quirks.rs
crates/spiral-gpu/: Cargo.toml
crates/spiral-gyre/: Cargo.toml
crates/spiral-gyre/src/: block.rs  box_model.rs  lib.rs  style.rs
crates/spiral-gyre/tests/: edge_sizes_surface.rs  layout_engine_surface.rs  layout_tests.rs
crates/spiral-html/: Cargo.toml
crates/spiral-html/src/: lib.rs
crates/spiral-imagedecoder/: Cargo.toml
crates/spiral-imagedecoder/src/: lib.rs
crates/spiral-imagedecoder/tests/: imagedecoder_surface.rs
crates/spiral-ipc/: Cargo.toml
crates/spiral-ipc/src/: lib.rs
crates/spiral-ipc/tests/: transport_surface.rs
crates/spiral-js/: Cargo.toml
crates/spiral-js/src/: lib.rs
crates/spiral-layout/: Cargo.toml
crates/spiral-layout/src/: lib.rs
crates/spiral-net/: Cargo.toml
crates/spiral-net/src/: lib.rs
crates/spiral-net/tests/: resolver_surface.rs
crates/spiral-network/: Cargo.toml
crates/spiral-network/src/: lib.rs
crates/spiral-network/tests/: filter_hook.rs  http_client.rs
crates/spiral-paint/: Cargo.toml
crates/spiral-paint/src/: lib.rs
crates/spiral-paint/tests/: paint_surface.rs
crates/spiral-render/: Cargo.toml
crates/spiral-render/src/: font.rs  lib.rs  png.rs  software.rs
crates/spiral-render/tests/: rgba_surface.rs
crates/spiral-sandbox/: Cargo.toml
crates/spiral-sandbox/src/: lib.rs
crates/spiral-sandbox/tests/: sandbox_surface.rs
crates/spiral-theme/: Cargo.toml
crates/spiral-ui/: Cargo.toml
crates/spiral-ui/src/: lib.rs
crates/spiral-ui/tests/: browser_ui_surface.rs
crates/spiral-vortex/: Cargo.toml
crates/spiral-vortex/src/: error.rs  lib.rs
crates/spiral-vortex/src/ast/: expr.rs  mod.rs  span.rs  stmt.rs
crates/spiral-vortex/src/builtins/: array.rs  console.rs  math.rs  mod.rs  object.rs
crates/spiral-vortex/src/dom_bindings/: mod.rs
crates/spiral-vortex/src/event_loop/: mod.rs
crates/spiral-vortex/src/gc/: arena.rs  header.rs  heap.rs  key.rs  mod.rs
crates/spiral-vortex/src/lexer/: cursor.rs  mod.rs  token.rs
crates/spiral-vortex/src/parser/: expr.rs  mod.rs  pratt.rs  stmt.rs
crates/spiral-vortex/src/runtime/: mod.rs
crates/spiral-vortex/src/v8/: mod.rs
crates/spiral-vortex/src/value/: jsvalue.rs  mod.rs  number.rs  object.rs  string.rs
crates/spiral-vortex/src/vm/: interpreter.rs  mod.rs
crates/spiral-vortex/tests/: vortex_surface.rs
docs/: active_context.md  architecture-shared-everything.md  audit-sprint-m4.md  baseline-warnings.md  design-capability-types.md  design-filter-rule-model.md  design-vortex-heap.md  glossary.md  implementation_tracker.md  innovations-backlog.md  methodology.md  phase1-tasks.md  progress_ledger.md  system_architecture.md
docs/agents/: PROMPT_LIBRARY.md  README.md  architect.md  bot-fixer.md  bot-reviewer-external.md  bot-reviewer.md  implementer.md  ledger-template.md  onboarding.md  release.md  reviewer.md  security.md  tester.md
docs/architecture/: context.md  filter.md  fmt.md  gyre.md  net.md  vortex.md  wpt-integration.md
docs/archives/: phase1-tasks.md
docs/audits/: 2026-06-15-baseline.md  2026-06-16-doc-drift.md
docs/decisions/: 0000-template.md  0001-css-parser-spiral-fmt.md  0002-vortex-from-scratch.md  0003-gyre-rename.md  0004-resolver-trait-async-design.md  0005-filter-hook-architecture.md  0006-browser-image-decoder-dep.md  0007-i18n-table-stakes-bet.md  0010-bot-architecture.md  0013-deepsource-replaces-sonar-and-spiral-bot.md  README.md
docs/failures/: 2026-06-18-001-render-node-id.md  README.md
docs/innovations-stubs-archive/: batch-1-audited.md  batch-1-original.md  batch-2-audited.md  batch-2-original.md  batch-3.md  (+2 more)
scripts/: audit-doc-drift.sh  audit-orphan-exports.sh
specs/: GAP_ANALYSIS.md
(+53 files in other folders)
