[workspace]
members = [
    "crates/spiral-core",
    "crates/spiral-browser",
    "crates/spiral-html",
    "crates/spiral-css",
    "crates/spiral-layout",
    "crates/spiral-render",
    "crates/spiral-js",
    "crates/spiral-dom",
    "crates/spiral-paint",
    "crates/spiral-network",
    "crates/spiral-ipc",
    "crates/spiral-sandbox",
    "crates/spiral-ui",
    "crates/spiral-theme",
    "crates/spiral-net",
    "crates/spiral-crypto",
    "crates/spiral-gpu",
    "crates/spiral-imagedecoder",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/your-org/spiral-browser"
description = "A fully independent web browser built from scratch in Rust"
authors = ["Spiral Contributors"]

[workspace.dependencies]
# Internal crates
spiral-core = { path = "crates/spiral-core" }
spiral-browser = { path = "crates/spiral-browser" }
spiral-html = { path = "crates/spiral-html" }
spiral-css = { path = "crates/spiral-css" }
spiral-layout = { path = "crates/spiral-layout" }
spiral-render = { path = "crates/spiral-render" }
spiral-js = { path = "crates/spiral-js" }
spiral-dom = { path = "crates/spiral-dom" }
spiral-paint = { path = "crates/spiral-paint" }
spiral-network = { path = "crates/spiral-network" }
spiral-ipc = { path = "crates/spiral-ipc" }
spiral-sandbox = { path = "crates/spiral-sandbox" }
spiral-ui = { path = "crates/spiral-ui" }
spiral-theme = { path = "crates/spiral-theme" }
spiral-net = { path = "crates/spiral-net" }
spiral-crypto = { path = "crates/spiral-crypto" }
spiral-gpu = { path = "crates/spiral-gpu" }
spiral-imagedecoder = { path = "crates/spiral-imagedecoder" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"

# HTML parsing
html5ever = "0.39"

# CSS parsing
cssparser = "0.37"
selectors = "0.38"

# Layout
taffy = "0.11"

# Rendering
vello = "0.9"
wgpu = "29"

# JavaScript
boa_engine = "0.21"

# Networking
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# DNS
hickory-resolver = "0.25"
hickory-proto = "0.25"

# TLS
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"

# Text
harfrust = "0.8"
swash = "0.2"
cosmic-text = "0.19"

# Image decoding
png = "0.18"
zune-jpeg = "0.5"
webp = "0.3"
ravif = "0.13"

# Sandbox
rustix = { version = "0.38", features = ["process", "thread", "time"] }
caps = "0.5"

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"

