[workspace]
members = [
    "crates/spiral-core",
    "crates/spiral-browser",
    "crates/spiral-css",
    "crates/spiral-gyre",
    "crates/spiral-render",
    "crates/spiral-vortex",
    "crates/spiral-dom",
    "crates/spiral-paint",
    "crates/spiral-network",
    "crates/spiral-ipc",
    "crates/spiral-sandbox",
    "crates/spiral-ui",
    "crates/spiral-theme",
    "crates/spiral-net",
    "crates/spiral-crypto",
    "crates/spiral-gpu",
    "crates/spiral-imagedecoder",
    "crates/spiral-context",
    "crates/spiral-filter",
    "crates/spiral-fmt",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/your-org/spiral-browser"
description = "A fully independent web browser built from scratch in Rust"
authors = ["Spiral Contributors"]

[workspace.dependencies]
# Internal crates
spiral-core = { path = "crates/spiral-core" }
spiral-browser = { path = "crates/spiral-browser" }
spiral-css = { path = "crates/spiral-css" }
spiral-gyre = { path = "crates/spiral-gyre" }
spiral-render = { path = "crates/spiral-render" }
spiral-vortex = { path = "crates/spiral-vortex" }
spiral-dom = { path = "crates/spiral-dom" }
spiral-paint = { path = "crates/spiral-paint" }
spiral-network = { path = "crates/spiral-network" }
spiral-ipc = { path = "crates/spiral-ipc" }
spiral-sandbox = { path = "crates/spiral-sandbox" }
spiral-ui = { path = "crates/spiral-ui" }
spiral-theme = { path = "crates/spiral-theme" }
spiral-net = { path = "crates/spiral-net" }
spiral-crypto = { path = "crates/spiral-crypto" }
spiral-gpu = { path = "crates/spiral-gpu" }
spiral-imagedecoder = { path = "crates/spiral-imagedecoder" }
spiral-context = { path = "crates/spiral-context" }
spiral-filter = { path = "crates/spiral-filter" }
spiral-fmt = { path = "crates/spiral-fmt" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"

# HTML parsing
# (spiral-html retired 2026-06-15; spiral-fmt is the from-spec implementation)

# CSS parsing
cssparser = "0.37"
selectors = "0.38"

# Layout
# Gyre is custom; no transitional layout engine dependency.

# Rendering
vello = "0.9"
wgpu = "29"

# JavaScript
# Vortex is Spiral's from-scratch Rust JS engine.
# rusty_v8 is available behind the `v8` feature on spiral-vortex for CI
# compliance testing (the "V8 oracle"). Default build has zero V8 deps.
rusty_v8 = "0.32.1"

# Networking
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# DNS
hickory-resolver = "0.25"
hickory-proto = "0.25"

# TLS
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"

# Text
harfrust = "0.8"
swash = "0.2"
cosmic-text = "0.19"

# Image decoding
png = "0.18"
zune-jpeg = "0.5"
webp = "0.3"
ravif = "0.13"

# Sandbox
rustix = { version = "0.38", features = ["process", "thread", "time"] }
caps = "0.5"

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"

# Cryptographic primitives
sha2 = "0.10"
getrandom = "0.2"

