[package]
name = "spiral-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spiral — capability-typed API surface for the shared-everything renderer"

[dependencies]
spiral-core.workspace = true
spiral-dom.workspace = true
thiserror.workspace = true

[dev-dependencies]
trybuild = "1"
