[package]
name = "spiral-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for Spiral Browser"

[dependencies]
spiral-core.workspace = true
sha2.workspace = true
getrandom.workspace = true
log.workspace = true
thiserror.workspace = true
