[package]
name = "spiral-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spiral's vendored parser crate — from-spec HTML5 tokeniser + tree builder, CSS parser"

[dependencies]
spiral-core.workspace = true
spiral-dom.workspace = true
log.workspace = true
thiserror.workspace = true
