[package]
name = "spiral-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spiral's from-spec HTML5 tokeniser + tree builder, CSS parser (no html5ever, no cssparser)"

[dependencies]
spiral-core.workspace = true
spiral-dom.workspace = true
log.workspace = true
thiserror.workspace = true
