[package]
name = "spiral-gyre"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gyre — Spiral's custom layout engine (block, flex, grid)"

[dependencies]
spiral-core.workspace = true
spiral-css.workspace = true
spiral-dom.workspace = true
log.workspace = true
thiserror.workspace = true
