[package]
name = "spiral-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IPC transport layer for Spiral Browser"

[dependencies]
spiral-core.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
log.workspace = true
thiserror.workspace = true
