[package]
name = "spiral-network"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP client and networking for Spiral Browser"

[dependencies]
spiral-core.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
hickory-resolver.workspace = true
hickory-proto.workspace = true
tokio.workspace = true
log.workspace = true
thiserror.workspace = true
