[package]
name = "spiral-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Process sandboxing for Spiral Browser"

[dependencies]
spiral-core.workspace = true
log.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
caps.workspace = true
rustix = { workspace = true, features = ["thread", "time"] }
