[package]
name = "spiral-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser chrome UI for Spiral Browser"

[dependencies]
spiral-core.workspace = true
spiral-gpu.workspace = true
spiral-theme.workspace = true
log.workspace = true
thiserror.workspace = true
